# MetaCompiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.MD  selfhost.json  selfhost.mcl  simple_ld.json  test  test.json  xmake.lua
.devcontainer/: Dockerfile  devcontainer.json
.mc/: CMakeLists.txt
.mc/src/: ast.cpp  ast.hpp  parser.y
core/: interpreter
include/mc/: generate.hpp  language_description.hpp  logging.hpp  options.hpp  stencil.hpp  utils.hpp
neodymium/: component.nd  lang.json  neodymium.json  neodymium.nd
neodymium/src/: CMakeLists.txt  ast.cpp  ast.hpp  lexer.l  main.cpp  parser.y  tokens.hpp
res/: assemble.sh  res.md
src/: CMakeLists.txt  generate.cpp  language_description.cpp  logging.cpp  main.cpp  options.cpp  stencil.cpp  target_generated.cpp
templates/: Makefile
testing/: requirements.txt  tester.py  util.py
testing/tests/0000_simplest_language/: ld.json
testing/tests/0000_simplest_language/expected/0000_if_true_printf/: code  stdout
testing/tests/0000_simplest_language/inputs/: 0000_if_true_printf
testing/tests/0001_mcl_module/: ld.json
testing/tests/0001_mcl_module/expected/0000_module/: stdout
testing/tests/0001_mcl_module/inputs/: 0000_module
tests/neodymium/: hello_world.txt  hw.nd  hw.txt  includes.nd  interp.nd  interp.txt  test.nd
tests/raw/: ld.json  test.json
